--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "tmdb-express-server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^0.26.1",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3"
-  }
+    "name": "tmdb-server-express",
+    "version": "0",
+    "main": "app.js",
+    "scripts": {
+        "start": "node app"
+    },
+    "dependencies": {
+        "axios": "0.27.2",
+        "dotenv": "16.0.1",
+        "express": "4.18.1"
+    }
 }
